Updated width and links
Slow slog to improve page. I hate HTML dev

--- a/index.html
+++ b/index.html
@@ -273,17 +273,17 @@
     <div id="projects" class="background-alt">
       <div id="writing"> </div>
       <h2 class="heading"> Writing </h2>
-      <div class="container" style="width:59%; background-color:white;" >
+      <div class="container" style="width:85%; background-color:white;" >
         <h3> Blog posts </h3>
         <ul style="vertical-align:middle; margin: 15px 14px; list-style-type: none;">
-        <li> <a href=""> Medical Imaging Meets NIPS: A Summary </a> </li>
-        <li> Overarching trends and application at NIPS (with links!)</li>
+        <li> <a href="https://towardsdatascience.com/medical-imaging-meets-nips-a-summary-43bf1b0d0c62"> Medical Imaging Meets NIPS: A Summary </a> </li>
+        <li> <a href="https://towardsdatascience.com/overarching-trends-and-applications-at-nips-2017-with-links-fc523d3354a7"> Overarching trends and application at NIPS (with links!)</a> </li>
         <li> Complex event processing with Flink </li>
         <li> Computer Vision in Sports</li>
         <li> Building a NARX in MATLAB to forecast time series data </li>
       </ul>
     </div>
-      <div class="container" style="width:59%; background-color:white;" >
+      <div class="container" style="width:85%; background-color:white;" >
         <h3> Workshops/Preprints (Non-Archival)</h3>
         <ul style="vertical-align:middle; list-style-type: none;">
           <li>
