--- a/index.html
+++ b/index.html
@@ -164,13 +164,21 @@
               <h3>Eastern Maine Medical Center</h3>
               <h4> Data Analyst (July 2017-Present)</h4>
               <p>
-               I design interactive charts with Bokeh in Python for hospital administrators and doctors, create ETL pipelines to pull data from the hospital's decentralized data sources (such as Cerner, "side" SQL databases, and manually maintained Excel notebooks), and employ data driven approaches to improve hospital performance. Finally, I'm also working on a "modern" data architecture built on Kafka and PostgreSQL in order to automate tedious manual processes and provide realtime analytics for clients.
+               I design interactive charts with Bokeh in Python for hospital administrators and doctors, create ETL pipelines to pull data from the hospital's decentralized data sources (such as Cerner, 3M, "side" SQL databases, and manually maintained Excel notebooks), and employ data driven approaches to improve hospital performance. Finally, I'm also working on a "modern" data architecture built on Kafka and PostgreSQL in order to automate tedious manual processes and provide realtime analytics for clients.
              </p>
               <h4>Data Analyst Intern (June 2016-July 2017)</h4>
               <p>
                   I assisted the data analytics team at EMMC during the summer months (June-August) and over the winter break (December-January). I analyzed a variety of data including both patient and financial data. I used various tools such as SQL and Altova MapForce to extract, transform, and load data (ETL) and then created data visualizations.
               </p>
           </div>
+          
+          <div data-date="June 2015 – June 2017">
+                <h3>PaddleSoft</h3>
+                <h4>Founder</h4>
+                <p>
+                    I founded PaddleSoft in order to help paddlers plan their whitewater adventures. Over the course of the last two years I have created many paddling related services for paddlers. Some of my favorites included using D3.js, NodeJS, and Kafka to build a <a href="http://rivermaps.herokuapp.com"> real time river flow map </a>, using <a href="https://medium.com/@paddlesoft/building-a-recommendation-engine-with-neo4j-part-1-simple-graph-based-approaches-16c3cea32ff"> Neo4j and CQL queries to to recommend rivers </a>  and paddling partners to our users , and using MATLAB to create a time series neural network to predict the flow of the Kenduskeag stream. More details can be found below in the project section of this page and on the <a href="https://medium.com/@paddlesoft"> PaddleSoft blog </a>. All blog entries are written by myself unless otherwise noted.
+                </p>
+            </div>
 
           <div data-date="May 2014 – August 2014">
               <h3>Eastern Maine Health Services</h3>
@@ -179,13 +187,7 @@
                   I collaborated with HR in order to develop and fine-tune HRIS systems. A few of my tasks included analyzing LAWSON reports with Excel, using SQL and Microsoft Access to automate Affordable Care Act and COBRA reporting, creating custom Excel functions and Macros with VB, and collaborating with a larger team in the implementation of manager self-service.
               </p>
           </div>
-        	<div data-date="June 2015 – Present">
-                <h3>PaddleSoft</h3>
-                <h4>Founder</h4>
-                <p>
-                    I founded PaddleSoft in order to help paddlers plan their whitewater adventures. Over the course of the last two years I have created many paddling related services for paddlers. Some of my favorites included using D3.js, NodeJS, and Kafka to build a <a href="http://rivermaps.herokuapp.com"> real time river flow map </a>, using <a href="https://medium.com/@paddlesoft/building-a-recommendation-engine-with-neo4j-part-1-simple-graph-based-approaches-16c3cea32ff"> Neo4j and CQL queries to to recommend rivers </a>  and paddling partners to our users , and using MATLAB to create a time series neural network to predict the flow of the Kenduskeag stream. More details can be found below in the project section of this page and on the <a href="https://medium.com/@paddlesoft"> PaddleSoft blog </a>. All blog entries are written by myself unless otherwise noted.
-                </p>
-            </div>
+
 
 
             <div data-date="May 2012 – August 2013">
