--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                   I assisted the data analytics team at EMMC during the summer months (June-August) and over the winter break (December-January). I analyzed a variety of data including both patient and financial data. I used various tools such as SQL and Altova MapForce to extract, transform, and load data (ETL) and then created data visualizations.
               </p>
           </div>
-          
+
           <div data-date="June 2015 – June 2017">
                 <h3>PaddleSoft</h3>
                 <h4>Founder</h4>
@@ -280,8 +280,8 @@
         <ul style="vertical-align:middle; margin: 15px 14px; list-style-type: none;">
         <li> <a href="https://towardsdatascience.com/medical-imaging-meets-nips-a-summary-43bf1b0d0c62"> Medical Imaging Meets NIPS: A Summary </a> </li>
         <li> <a href="https://towardsdatascience.com/overarching-trends-and-applications-at-nips-2017-with-links-fc523d3354a7"> Overarching trends and application at NIPS (with links!)</a> </li>
-        <li> Complex event processing with Flink </li>
-        <li> Computer Vision in Sports</li>
+        <li> <a href="https://towardsdatascience.com/complex-event-processing-with-flink-on-realtime-twitter-data-d09d9953df1b"> Complex event processing with Flink </a></li>
+        <li> <a href="https://towardsdatascience.com/computer-vision-in-sports-61195342bcef"> Computer Vision in Sports </a> </li>
         <li> Building a NARX in MATLAB to forecast time series data </li>
       </ul>
     </div>
