Added li formatting and latest skills

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     margin: auto;
 
   }
+  li {
+
+  padding: 5px 4px 6px 7px;
+  margin-bottom:2px; /* 3px margin plus 1px for the border */
+  position:relative;
+}
 
     </style>
 <script src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"></script>
@@ -131,7 +137,7 @@
 
                         <br> </br>
 
-                        The majority of my projects and contributions are open-source and on GitHub. I'm currently a Kaggle competitions expert and ranked in the top 5% of all data scientists on Kaggle. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Additionally, I have written many articles both on Medium, published in Towards Data Science and in PaddleSoft engineering, and LinkedIn.
+                        The majority of my projects and contributions are open-source and on GitHub. I'm currently a Kaggle competitions expert and ranked in the top 6% of all data scientists on Kaggle. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Additionally, I have written many articles both on Medium, published in Towards Data Science and in PaddleSoft engineering, and LinkedIn some of which are listed in the <a href="#writing"> writing section </a>.
                         </p>
                          <br></br>
                          <p>
@@ -379,9 +385,8 @@
             <li>JavaScript</li>
             <li>Scheme</li>
             <li>NoSQL</li>
-            <li>Spark</li>
-            <li>Hadoop</li>
             <li>Flink</li>
+            <li>Hadoop</li>
             <li>Kafka</li>
             <li>Airflow</li>
             <li>Ruby on Rails</li>
@@ -393,6 +398,8 @@
             <li>Git</li>
             <li>Docker</li>
             <li>Codecov</li>
+            <li>Codefresh</li>
+            <li>Slack API</li>
         </ul>
 
     </div>
