--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="website" />
+<meta property="og:url" content="isaacmg.github.io" />
+<meta property="og:image" content="http://isaacmg.github.io/images/back3.jpg" />
+<meta property="og:description" content="My extended developer portofolio.
+Includes detailed information about all my recent projects and interests."/>
+
     <title>My Portfolio</title>
     <style>
     #floatbar {
