Updated skills and changes
s

--- a/index.html
+++ b/index.html
@@ -338,11 +338,26 @@ Includes detailed information about all my recent projects and interests."/>
                 </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
+                        <div class="project shadow-large">
+                        <div class="project-image">
+                            <img src="https://isaacmg.github.io/images/model_ag.PNG" height=300px width=350px />
+                        </div>
+                    <div class="project-info">
+                        <h3> <b> Model Agnostic Prediction </b></h3>
+                        <p>
+                            This project aims to allow users to use a common set of prediction functions (preprocessing, predict, postprocess) regardless of the backend code for their model. The goal is to make it easier to serve ML models in production. The code is compatibile with SeldonCore and I provide several examples of how to use it on the repository homepage.
+                        </p>
+                        <a href="">View Project</a>
+                    </div>
+                    </div>
+                
+                    <div class="project shadow-large">
                     <div class="project-image">
                         <img src="https://cdn-images-1.medium.com/max/800/1*k0o2G0XRyJW2DHcjfyUO-A.png" height=300px width=350px />
                     </div>
+
                     <!-- End .project-image -->
+              
                     <div class="project-info">
                         <h3> <b> Kenduskeag Stream Flow Prediction </b></h3>
                         <p>
@@ -351,6 +366,7 @@ Includes detailed information about all my recent projects and interests."/>
                         <a href="https://github.com/isaacmg/kenduskeag_narx">View Project</a>
                     </div>
                     <!-- End .project-info -->
+                </div>
                 </div>
                   <div class="project shadow-large">
                     <div class="project-image">
@@ -388,9 +404,14 @@ Includes detailed information about all my recent projects and interests."/>
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>Java</li>
             <li>Python</li>
+            <li>Pandas</li>
+            <li>Keras</li>
+            <li>PyTorch</li>
+            <li>NumPy</li>
+            <li>Flask</li>
             <li>SQL</li>
+            <li>Java</li>
             <li>JavaScript</li>
             <li>Scheme</li>
             <li>NoSQL</li>
@@ -399,7 +420,6 @@ Includes detailed information about all my recent projects and interests."/>
             <li>Kafka</li>
             <li>Airflow</li>
             <li>Ruby on Rails</li>
-            <li>PyTorch</li>
             <li>NodeJS</li>
             <li>ElasticSearch</li>
             <li>Amazon Web Services</li>
