fixed image url

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ Includes detailed information about all my recent projects and interests."/>
 
                         <div class="project shadow-large">
                         <div class="project-image">
-                            <img src="https://isaacmg.github.io/images/model_ag.PNG" height=300px width=350px />
+                            <img src="https://isaacmg.github.io/images/agnosti_pred.png" height=300px width=350px />
                         </div>
                     <div class="project-info">
                         <h3> <b> Model Agnostic Prediction </b></h3>
