--- a/index.html
+++ b/index.html
@@ -340,12 +340,12 @@ Includes detailed information about all my recent projects and interests."/>
 
                         <div class="project shadow-large">
                         <div class="project-image">
-                            <img src="https://isaacmg.github.io/images/agnosti_pred.png" height=300px width=350px />
+                            <img src="https://isaacmg.github.io/images/model_ag_final.png" height=300px width=350px />
                         </div>
                     <div class="project-info">
                         <h3> <b> Model Agnostic Prediction </b></h3>
                         <p>
-                            This project aims to allow users to use a common set of prediction functions (preprocessing, predict, postprocess) regardless of the backend code for their model. The goal is to make it easier to serve ML models in production. The code is compatibile with SeldonCore and I provide several examples of how to use it on the repository homepage.
+                            This project aims to allow users to use a common set of prediction functions (preprocessing, predict, and process_result) regardless of the backend code for their model. The goal is to make it easier to serve ML models in production. The code is compatibile with SeldonCore and I provide several examples of how to use it on the repository homepage.
                         </p>
                         <a href="">View Project</a>
                     </div>
