--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ Includes detailed information about all my recent projects and interests."/>
                         <p>
                             This project aims to allow users to use a common set of prediction functions (preprocessing, predict, and process_result) regardless of the backend code for their model. The goal is to make it easier to serve ML models in production. The code is compatibile with SeldonCore and I provide several examples of how to use it on the repository homepage.
                         </p>
-                        <a href="">View Project</a>
+                        <a href="https://github.com/isaacmg/model_agnostic_prediction">View Project</a>
                     </div>
                     </div>
                 
