--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="My Portfolio" />
     <meta property="og:type" content="website" />
-<meta property="og:url" content="isaacmg.github.io" />
-<meta property="og:image" content="http://isaacmg.github.io/images/back3.jpg" />
-<meta property="og:description" content="My extended developer portofolio.
+    <meta property="og:url" content="isaacmg.github.io" />
+    <meta property="og:image" content="http://isaacmg.github.io/images/back3.jpg" />
+    <meta property="og:description" content="My extended developer portofolio.
 Includes detailed information about all my recent projects and interests."/>
 
     <title>My Portfolio</title>
@@ -121,12 +121,12 @@ Includes detailed information about all my recent projects and interests."/>
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm looking for opportunites in the areas of Data Science and Machine Learning. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my work in detail. If you want just the highlights please download my resume above. <br></br>
+                        I'm looking for opportunites in the areas of Data Science, Data Engineering, and Machine Learning. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my work in detail. If you want just the highlights please download my resume above. <br></br>
 
                         <b> Background </b>
                         <br></br>
 
-                        I have an interesting variety of experiences from mobile development with XCode and Objective-C in my high school days, to full-stack development with Ruby on Rails and NodeJS in my first few years of college, to natural language processing/information retrieval with NLTK, Word2Vec, and ElasticSearch starting my junior year, to large-scale data processing with Spark and Hadoop begining last summer, and data science with NumPy, XGBoost, Keras, and Tensorflow most recently. However, I have found that no matter what language or part of the technology stack I work on, my talents and interests almost invariably come back to data and analytics. Whether it is learning a new theoretical data structure, designing an interactive data visualization with D3.js, creating a streaming data pipeline with Flink and Kafka, or building a predictive model with XGBoost and neural networks, I fundamentally enjoy both learning and working with data. The computer science courses that I have taken have given me a strong background in CS fundamentals, while my Physics and Math courses have provided me with the mathematical foundations necessary for machine learning. Additionally, my many courses in the liberal arts have enabled me to communicate clearly and convincingly in both English and Spanish. More recently, I have worked as a Data Analyst at Easter Maine Medical Center performing a variety of tasks ranging from
+                        I have an interesting variety of experiences from mobile development with XCode and Objective-C in my high school days, to full-stack development with Ruby on Rails and NodeJS in my first few years of college, to natural language processing/information retrieval with NLTK, Word2Vec, and ElasticSearch starting my junior year, to large-scale data processing with Spark and Hadoop begining last summer, and data science with NumPy, XGBoost, Bokeh, Keras, and Tensorflow most recently. However, I have found that no matter what language or part of the technology stack I work on, my talents and interests almost invariably come back to data and analytics. Whether it is learning a new theoretical data structure, designing an interactive data visualization with D3.js, creating a streaming data pipeline with Flink and Kafka, or building a predictive model with XGBoost and neural networks, I fundamentally enjoy both learning and working with data. The computer science courses that I have taken have given me a strong background in CS fundamentals, while my Physics and Math courses have provided me with the mathematical foundations necessary for machine learning. Additionally, my many courses in the liberal arts have enabled me to communicate clearly and convincingly in both English and Spanish. More recently, I have worked as a Data Analyst at Easter Maine Medical Center performing a variety of tasks ranging from
                         data engineering types tasks like building a Python pipeline to bring together the hospital's diverse data sources, to machine learning and analytics tasks such as researching RNNs for forecasting length of stay and creating interactive visualizations for physicians and administrators.
                         </p>
 
@@ -330,7 +330,7 @@ Includes detailed information about all my recent projects and interests."/>
                             <!-- End .project-image -->
                       
                             <div class="project-info">
-                                <h3> <b> Detecting/classifying conditions in lung X-Rays with limited annotated data </b></h3>
+                                <h3> <b> Detecting/classifying conditions in lung X-Rays with limited annotated data</b></h3>
                                 <p>
                                     On going research into localizing and classifying a variety of conditions in lung x-rays given only a small dataset through use of transfer learning and meta-learning.  
                                 </p>
@@ -426,6 +426,7 @@ Includes detailed information about all my recent projects and interests."/>
             <li>Pandas</li>
             <li>Keras</li>
             <li>PyTorch</li>
+            <li>Bokeh</li>
             <li>NumPy</li>
             <li>Flask</li>
             <li>SQL</li>
