Updated areas of research
Updated areas of research to and are

--- a/index.html
+++ b/index.html
@@ -122,11 +122,18 @@ Includes detailed information about all my recent projects and interests."/>
                 <div class="col-md-8">
                     <p>
                         I'm looking for opportunites in the areas of Data Science, Data Engineering, and Machine Learning. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my work in detail. If you want just the highlights please download my resume above. <br></br>
+                        <b> Primary Areas of Research/Specialities</b>
+                        <ul>
+                            <li>Transfer and multitask learning</li>
+                            <li>Deployment of deep learning models to production</li>
+                            <li> Stream processing and realtime analytics</li>
+                          </ul>
 
+                        <br></br>
                         <b> Background </b>
                         <br></br>
 
-                        I have an interesting variety of experiences from mobile development with XCode and Objective-C in my high school days, to full-stack development with Ruby on Rails and NodeJS in my first few years of college, to natural language processing/information retrieval with NLTK, Word2Vec, and ElasticSearch starting my junior year, to large-scale data processing with Spark and Hadoop begining last summer, and data science with NumPy, XGBoost, Bokeh, Keras, and Tensorflow most recently. However, I have found that no matter what language or part of the technology stack I work on, my talents and interests almost invariably come back to data and analytics. Whether it is learning a new theoretical data structure, designing an interactive data visualization with D3.js, creating a streaming data pipeline with Flink and Kafka, or building a predictive model with XGBoost and neural networks, I fundamentally enjoy both learning and working with data. The computer science courses that I have taken have given me a strong background in CS fundamentals, while my Physics and Math courses have provided me with the mathematical foundations necessary for machine learning. Additionally, my many courses in the liberal arts have enabled me to communicate clearly and convincingly in both English and Spanish. More recently, I have worked as a Data Analyst at Easter Maine Medical Center performing a variety of tasks ranging from
+                        I have an interesting variety of experiences from mobile development with XCode and Objective-C in my high school days, to full-stack development with Ruby on Rails and NodeJS in my first few years of college, to natural language processing/information retrieval with NLTK, Word2Vec, and ElasticSearch starting my junior year of college, to large-scale data processing with Spark and Hadoop begining in 2017, and data science with NumPy, XGBoost, Bokeh, Keras, and Tensorflow most recently. However, I have found that no matter what language or part of the technology stack I work on, my talents and interests almost invariably come back to data and analytics. Whether it is learning a new theoretical data structure, designing an interactive data visualization with D3.js, creating a streaming data pipeline with Flink and Kafka, or building a predictive model with XGBoost and neural networks, I fundamentally enjoy both learning and working with data. The computer science courses that I have taken have given me a strong background in CS fundamentals, while my Physics and Math courses have provided me with the mathematical foundations necessary for machine learning. Additionally, my many courses in the liberal arts have enabled me to communicate clearly and convincingly in both English and Spanish. More recently, I have worked as a Data Analyst at Easter Maine Medical Center performing a variety of tasks ranging from
                         data engineering types tasks like building a Python pipeline to bring together the hospital's diverse data sources, to machine learning and analytics tasks such as researching RNNs for forecasting length of stay and creating interactive visualizations for physicians and administrators.
                         </p>
 
@@ -293,6 +300,8 @@ Includes detailed information about all my recent projects and interests."/>
       <div class="container" style="width:85%; background-color:white;" >
         <h3> Blog posts </h3>
         <ul style="vertical-align:middle; margin: 15px 14px; list-style-type: none;">
+        <li> <a href="https://towardsdatascience.com/deploying-deep-learning-models-part-1-an-overview-77b4d01dd6f7"> Deploying deep learning models an overview </a></li>
+        <li> <a href="https://towardsdatascience.com/icml-2018-advances-in-transfer-multitask-and-semi-supervised-learning-2a15ef7208ec"> Advances in Multi-Task and Transfer Learning at ICML 2018 </a> </li>
         <li> <a href="https://towardsdatascience.com/medical-imaging-meets-nips-a-summary-43bf1b0d0c62"> Medical Imaging Meets NIPS: A Summary </a> </li>
         <li> <a href="https://towardsdatascience.com/overarching-trends-and-applications-at-nips-2017-with-links-fc523d3354a7"> Overarching trends and application at NIPS (with links!)</a> </li>
         <li> <a href="https://towardsdatascience.com/complex-event-processing-with-flink-on-realtime-twitter-data-d09d9953df1b"> Complex event processing with Flink </a></li>
@@ -330,7 +339,7 @@ Includes detailed information about all my recent projects and interests."/>
                             <!-- End .project-image -->
                       
                             <div class="project-info">
-                                <h3> <b> Detecting/classifying conditions in lung X-Rays with limited annotated data</b></h3>
+                                <h3> <b> Detecting and classifying conditions in medical imaging with limited annotated data</b></h3>
                                 <p>
                                     On going research into localizing and classifying a variety of conditions in lung x-rays given only a small dataset through use of transfer learning and meta-learning.  
                                 </p>
