Add new experience

--- a/index.html
+++ b/index.html
@@ -181,11 +181,17 @@ Includes detailed information about all my recent projects and interests."/>
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-          <div data-date="June 2016 – Present">
+        <div data-date="July 2018 – January 2019">
+            <h3>Assorted Projects/Contracts</h3>
+            <h4> Mostly Machine Learning Engineering</h4>
+            <p> For the past six months I've been working on a variety of contracts and open-source projects. This included designing Peelout, a set of tools aimed at easing the process of deploying deep learning models to production, a chatbot that employs the latest NLP tools and models, and writing a series of articles for EyeOnAI, an online magazine focused A.I. </p>
+
+        </div>
+          <div data-date="June 2016 – July 2018">
               <h3>Eastern Maine Medical Center</h3>
               <h4> Data Analyst (July 2017-June 2018)</h4>
               <p>
-               I design interactive charts with Bokeh in Python for hospital administrators and doctors, create ETL pipelines to pull data from the hospital's decentralized data sources (such as Cerner, 3M, "side" SQL databases, and manually maintained Excel notebooks), and employ data driven approaches to improve hospital performance. Finally, I'm also working on a "modern" data architecture built on Kafka and PostgreSQL in order to automate tedious manual processes and provide realtime analytics for clients.
+               I designed interactive charts with Bokeh in Python for hospital administrators and doctors, created ETL pipelines to pull data from the hospital's decentralized data sources (such as Cerner, 3M, "side" SQL databases, and manually maintained Excel notebooks), and employed data driven approaches to improve hospital performance. Finally, I'm also working on a "modern" data architecture built on Kafka and PostgreSQL in order to automate tedious manual processes and provide realtime analytics for clients.
              </p>
              <br></br>
               <h4>Data Analyst Intern (June 2016-July 2017)</h4>
@@ -341,7 +347,7 @@ Includes detailed information about all my recent projects and interests."/>
                             <div class="project-info">
                                 <h3> <b> Detecting and classifying conditions in medical imaging with limited annotated data</b></h3>
                                 <p>
-                                    On going research into localizing and classifying a variety of conditions in lung x-rays given only a small dataset through use of transfer learning and meta-learning.  
+                                    On going research into localizing and classifying a variety of conditions in lung X-Rays given only a small dataset through the use of transfer learning and meta-learning.  
                                 </p>
                                 <a href="">View Project</a>
                             </div>
