--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Includes detailed information about all my recent projects and interests."/>
         <div data-date="July 2018 – January 2019">
             <h3>Assorted Projects/Contracts</h3>
             <h4> Mostly Machine Learning Engineering</h4>
-            <p> For the past six months I've been working on a variety of contracts and open-source projects. This included designing Peelout, a set of tools aimed at easing the process of deploying deep learning models to production, a chatbot that employs the latest NLP tools and models, and writing a series of articles for EyeOnAI, an online magazine focused A.I. </p>
+            <p> From July to January I worked on a variety of contracts and open-source projects. This included designing Peelout, a set of tools aimed at easing the process of deploying deep learning models to production, creating a chatbot with Spacy, Tensorflow, and Redis, and writing a series of articles for EyeOnAI, an online magazine focused on A.I. </p>
 
         </div>
           <div data-date="June 2016 – July 2018">
