Add DE experience

--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@ Includes detailed information about all my recent projects and interests."/>
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+                <div data-date="January 2019 – Present">
+                        <h3>Hudson Bay Company (HBC)</h3>
+                        <h4> Data Engineer</h4>
+                        <p> </p>
+            
+                    </div>
+            
         <div data-date="July 2018 – January 2019">
             <h3>Assorted Projects/Contracts</h3>
             <h4> Mostly Machine Learning Engineering</h4>
